--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,24 +1,14 @@
 @import url(./ordinateur.css);
 @import url(./smartphone.css);
 
-:root
-{
-    --bg-header:rgb(12, 12, 12);
-    --fg-header: white;
-
-    --bg-main: rgb(37, 37, 37);
-    --fg-main: white;
-
-    --bg-footer: rgb(12, 12, 12);
-    --fg-footer: white;
+html, body {
+    width: 100vw; 
+    height: 100vh;
+    /* background: linear-gradient(gray, black); */
+    background-color: rgb(2, 11, 19);
+    color: aliceblue;
 }
 
-*
-{
-    margin: 0; padding: 0;
-}
-
-html, body
-{
-    width: 100%; height: 100%;
+#title{
+    font-family: kusanagi;
 }
